# healthtech-sim

./: .gitignore  Cargo.toml  README.md  claim.json  example.json  fake_claims.jsonl  phases.md  structure.md
src/: biller.rs  clearinghouse.rs  config.rs  json_faker.rs  lib.rs  logging.rs  main.rs  message.rs  payer.rs  reader.rs  remittance.rs  reporter.rs  schema.rs
tests/: integration.rs  system.rs
