[package]
name = "healthtechsim"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
anyhow = "1.0.98"
rand = "0.9.1"
